--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
       <nav role="navigation" id="nav" tabindex="0">
         <ul class="list-group-inline text-center push-0 pin-rc gutter-1-2">
           <li>
-            <a class="btn chapter-btn" href="chapter-xvii.html">
-              <i class="icon i-1"><svg><use xlink:href="images/icons.svg#prev"></use></svg></i>
+            <a class="btn chapter-btn" href="chapter-xvii.html" aria-label="chapter xvii">
+              <i role="presentation" class="icon i-1"><svg><use xlink:href="images/icons.svg#prev"></use></svg></i>
             </a>
           </li>
           <li>
-            <a class="btn chapter-btn" href="contents.html">
-              <i class="icon i-1"><svg><use xlink:href="images/icons.svg#contents"></use></svg></i>
+            <a class="btn chapter-btn" href="contents.html" aria-label="contents">
+              <i role="presentation" class="icon i-1"><svg><use xlink:href="images/icons.svg#contents"></use></svg></i>
             </a>
           </li>
           <li>
-            <a class="btn chapter-btn" href="chapter-xix.html">
-              <i class="icon i-1"><svg><use xlink:href="images/icons.svg#next"></use></svg></i>
+            <a class="btn chapter-btn" href="chapter-xix.html" aria-label="chapter xix">
+              <i role="presentation" class="icon i-1"><svg><use xlink:href="images/icons.svg#next"></use></svg></i>
             </a>
           </li>
         </ul>
@@ -121,18 +121,18 @@
       <nav>
         <ul class="list-group-inline text-center push-0">
           <li>
-            <a class="btn chapter-btn" href="chapter-xvii.html">
-              <i class="icon i-1"><svg><use xlink:href="images/icons.svg#prev"></use></svg></i>
+            <a class="btn chapter-btn" href="chapter-xvii.html" aria-label="xvii">
+              <i role="presentation" class="icon i-1"><svg><use xlink:href="images/icons.svg#prev"></use></svg></i>
             </a>
           </li>
           <li>
-            <a class="btn chapter-btn" href="contents.html">
-              <i class="icon i-1"><svg><use xlink:href="images/icons.svg#contents"></use></svg></i>
+            <a class="btn chapter-btn" href="contents.html" aria-label="contents">
+              <i role="presentation" class="icon i-1"><svg><use xlink:href="images/icons.svg#contents"></use></svg></i>
             </a>
           </li>
           <li>
-            <a class="btn chapter-btn" href="chapter-xix.html">
-              <i class="icon i-1"><svg><use xlink:href="images/icons.svg#next"></use></svg></i>
+            <a class="btn chapter-btn" href="chapter-xix.html" aria-label="xix">
+              <i role="presentation" class="icon i-1"><svg><use xlink:href="images/icons.svg#next"></use></svg></i>
             </a>
           </li>
         </ul>
