--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <li><a href="#nav">Jump to navigation</a></li>
   </ul>
 
-  <header class="book-ends max-length gutter pad-t-1-2 pad-b-1-2" role="banner">
+  <header class="book-ends max-length gutter pad-t-1-2 pad-b-1-2 no-print" role="banner">
     <strong class="book-title giga not-bold">Twenty Thousand Leagues Under the Sea</strong>
     <p class="book-author push-0"><span class="book-author-by micro italic">by</span> <span class="mega">Jules Verne</span></p>
   </header>
@@ -118,7 +118,7 @@
       <p>Ned bowed without replying. The combat had lasted a quarter of an hour. The monsters, vanquished and mutilated, left us at last, and disappeared under the waves. Captain Nemo, covered with blood, nearly exhausted, gazed upon the sea that had swallowed up one of his companions, and great tears gathered in his eyes.</p>
     </div>
     <footer class="chapter-ends chapter-copyright text-center pad-t-1-2 pad-b-1-2 gutter">
-      <nav>
+      <nav class="no-print">
         <ul class="list-group-inline text-center push-0">
           <li>
             <a class="btn chapter-btn" href="chapter-xvii.html" aria-label="xvii">
