--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <li><a href="#nav">Jump to navigation</a></li>
   </ul>
 
-  <header class="book-ends max-length gutter pad-t-1-2 pad-b-1-2 no-print" role="banner">
+  <header class="book-ends max-length gutter pad-t-1-2 pad-b-1-2" role="banner">
     <strong class="book-title giga not-bold">Twenty Thousand Leagues Under the Sea</strong>
     <p class="book-author push-0"><span class="book-author-by micro italic">by</span> <span class="mega">Jules Verne</span></p>
   </header>
@@ -28,7 +28,7 @@
         <h2 class="chapter-title not-bold push-0 peta">The Poulps</h2>
       </hgroup>
       <nav role="navigation" id="nav" tabindex="0">
-        <ul class="list-group-inline text-center push-0 pin-rc gutter-1-2">
+        <ul class="list-group-inline text-center push-0 pin-rc gutter-1-2 dont-print">
           <li>
             <a class="btn chapter-btn" href="chapter-xvii.html" aria-label="chapter xvii">
               <i role="presentation" class="icon i-1"><svg><use xlink:href="images/icons.svg#prev"></use></svg></i>
@@ -117,7 +117,7 @@
       <p>“I owed myself this revenge!” said the Captain to the Canadian.</p>
       <p>Ned bowed without replying. The combat had lasted a quarter of an hour. The monsters, vanquished and mutilated, left us at last, and disappeared under the waves. Captain Nemo, covered with blood, nearly exhausted, gazed upon the sea that had swallowed up one of his companions, and great tears gathered in his eyes.</p>
     </div>
-    <footer class="chapter-ends chapter-copyright text-center pad-t-1-2 pad-b-1-2 gutter">
+    <footer class="chapter-ends chapter-copyright text-center pad-t-1-2 pad-b-1-2 gutter dont-print">
       <nav class="no-print">
         <ul class="list-group-inline text-center push-0">
           <li>
@@ -140,7 +140,7 @@
     </footer>
   </article>
 
-  <footer class="book-ends text-center max-length gutter pad-t-1-2 pad-b-1-2" role="contentinfo">
+  <footer class="book-ends text-center max-length gutter pad-t-1-2 pad-b-1-2 dont-print" role="contentinfo">
     <small class="micro">Twenty Thousand Leagues Under the Sea © Jules Verne, 1870.</small>
   </footer>
 
